1999-04-25  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-session.c (camel_session_set_provider): 
	new method to set the default provider for a protocol.
	(camel_session_get_store_from_provider): 
	new method to instantiate a folder from a provider.

	* camel/camel-provider.h: s/GString/gchar/g
	+ typo fix.

	* camel/camel-provider.[ch]:
	basic provider structure. Have to write the
	code for dynamic loading.

1999-04-24  bertrand <Bertrand.Guiheneuf@inria.fr>
	
	* camel/url-util.[ch]: s/new_g_url/g_url_new

	* camel/url-util.c (new_g_url): URL 
	rewritten completely. Error handling not
	implemented in public functions.
	But URL scan works pretty well :)))

1999-04-24 bertrand <Bertrand.Guiheneuf@inria.fr>
	
	* camel/url-util.[ch]: I needed the url 
	functions to use GString, and I wanted a more
	general scheme so I finally started rewriting 
	the whole thing from scratch.
	No more code from gzilla :(
	
1999-04-23  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/url-util.[ch]:
	Utility functions to parse URLs.
	Stolen shamelessly from gzilla (www.gzilla.com)
	written by Raph Levien <raph@acm.org>
	
	* camel/Makefile.am: added url-util.[ch]
	compilation.

	* Makefile.am (SUBDIRS): removed devel-docs
	until I come up with a correct Makefile.am

	* camel/camel-store.h: 
	* camel/camel-folder.h:
	correct declarations of structs

1999-04-22  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/providers/MH/camel-mh-store.c:
	more test implementation.

	* camel/camel-store.c (camel_store_get_type): typo fix
	

1999-04-21  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/providers/MH/camel-mh-folder.c (camel_mh_folder_get_type): 
	start test provider.

1999-04-20  bertrand <Bertrand.Guiheneuf@inria.fr>
	
	* camel/camel-store.h: now CamelStore inherits from
	CamelService.

	* camel/camel-service.c (camel_service_class_init): 
	basic abstract service class.

1999-04-19  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/README: added some (few) explanations.
