@@ -32,7 +32,11 @@ extern "C" {
 #endif /* __cplusplus }*/
 
 #include <gtk/gtk.h>
+
+typedef struct _CamelSession CamelSession;
+
 #include "camel-provider.h"
+#include "camel-store.h"
 
 #define CAMEL_SESSION_TYPE     (camel_session_get_type ())
 #define CAMEL_SESSION(obj)     (GTK_CHECK_CAST((obj), CAMEL_SESSION_TYPE, CamelSession))
@@ -41,7 +45,6 @@ extern "C" {
 
 
 
-typedef struct _CamelSession CamelSession;
 
 struct _CamelSession
 {
